--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Github Testing</title>
     <h1>Halooo</h1>
     <h2>ini udah pak</h2>
+    <p>ini paragraf</p>
   </head>
   <body></body>
 </html>
